--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-    "BotName"    :    "TELEWAR",
-    "Token"    :    "place_your_bot_token_here",
+    "BotName"    :    "SudoRobot",
+    "Token"    :    "211865746:AAExVhEZeV3CqJIZuLv7L13F1ptmx4NS87E",
     "Version"    :    "v 2.1",
-    "Devlopers" 	:	[106191362],
-    "Groups"	:	[-1001024787932],
-    "Admins"	: [106191362,34235668,111940001,107434774],
+    "Devlopers" 	:	[90285047],
+    "Groups"	:	[-1001073906080],
+    "Admins"	: [90285047],
     "bban"	:	[]
 
 }
